--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Welcome to My Portfolio</h1>
+    <h1>Welcome to My Portfolio and Adventures</h1>
     <nav>
       <a href = "#about">About Me </a>
       <a href = "#projects"> Projects</a>
