--- a/index.html
+++ b/index.html
@@ -1,39 +1,51 @@
-<!DOCTYPE hytml> 
-<html lang = "en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset = "UTF-8">
-  <meta name = viewport" content = "width = device - width, initialscale = 1.0">
-  <title>My Portfolio</title>
-  <link rel = "stylesheet" href = "styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lizzy's Portfolio</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <!-- Optional: Bootstrap CSS for faster styling -->
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"> -->
 </head>
 <body>
-  <header>
-    <h1>Welcome to My Portfolio and Adventures</h1>
+    <!-- Navigation Bar -->
     <nav>
-      <a href = "#about">About Me </a>
-      <a href = "#projects"> Projects</a>
-      <a href = "contact"> Contact</a>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
     </nav>
-  </header>
 
-  <section id = "about">
-    <h2>About Me</h2>
-    <p>I'm a software enigineering student with a passion for beautiful code. </p>
-  </section>
+    <!-- Home Section -->
+    <section id="home">
+        <header>
+            <h1>Welcome to My Portfolio</h1>
+            <p>Hi, I'm Lizzy. I'm a CS Master's Studentfocused on ML, AI, and software development.</p>
+        </header>
+    </section>
 
-  <section id= "projects">
-    <h2> My Projects</h2>
-    <ul>
-      <li><a href = "httpsL//github.com/myproject">Project 1</a></li>
-    </ul>
-  </section>
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Briefly describe your background, focus areas, and expertise.</p>
+    </section>
 
-  <section id = "contact">
-    <h2>Contact Me</h2>
-    <p>Email: lizzydale3@gmail.com</p>
-<!-- need a something more here, links -->
-  </section>
-    
+    <!-- Projects Section -->
+    <section id="projects">
+        <h2>Projects</h2>
+        <p>Links to your primary projects (hike tracker and wave tracker) with descriptions will go here.</p>
+    </section>
+
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contact Me</h2>
+        <p>Email:lizzydale3@gmail.com</p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/lizzy/dale3">Your LinkedIn</a></p>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Lizzy's Portfolio</p>
+    </footer>
 </body>
 </html>
-  
