--- a/index.html
+++ b/index.html
@@ -16,25 +16,44 @@
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
     </nav>
-
-    <!-- Home Section -->
-    <section id="home">
+    
+    <!-- Hero Section -->
+    <section id="home" class="hero">
         <header>
             <h1>Welcome to My Portfolio</h1>
-            <p>Hi, I'm Lizzy. I'm a CS Master's Studentfocused on ML, AI, and software development.</p>
+            <p class="intro">Hi, I'm Lizzy, a software developer focused on Machine Learning, AI, and Software Development.</p>
+            <a href="#projects" class="cta">View My Projects</a>
         </header>
     </section>
 
     <!-- About Section -->
     <section id="about">
         <h2>About Me</h2>
-        <p>Briefly describe your background, focus areas, and expertise.</p>
+        <div class="about-content">
+            <img src="https://via.placeholder.com/200" alt="Your photo">
+            <p>
+                I am passionate about creating applications that solve real-world problems and constantly learning new technologies. 
+                With a strong focus on Machine Learning and AI, I aim to leverage my skills to build innovative solutions at the intersection of 
+                environmental solutions and software development.
+            </p>
+        </div>
     </section>
 
     <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-        <p>Links to your primary projects (hike tracker and wave tracker) with descriptions will go here.</p>
+        <div class = "projects-grid">
+            <div class = "project-card">
+                <h3>Hike Tracker</h3>
+                <p>A tool to track my hikes and analyze trail data.</p>
+                <a href= "#">View Project</a>
+            </div>
+            <div class = "project-card">
+                <h3>Wave Tracker</h3>
+                <p>Track wave conditions and plan your surfing trips.</p>
+                <a href="#">View Project</a>
+            </div>
+        </div>
     </section>
 
     <!-- Contact Section -->
